# PowerProject

./: Cargo.toml  client_out.txt  server_out.txt
client/: Cargo.toml
client/assets/animations/: Idle.glb  Walking.glb
client/assets/models/: Default.glb
client/src/: main.rs
client/src/plugins/: clientconnection.rs  mod.rs  renderer.rs  replicateplugin.rs
client/src/replicate/: combatantreplicate.rs  mod.rs
client/src/systems/: camerasystem.rs  combatantsystem.rs  mod.rs
server/: Cargo.toml
server/src/: main.rs
server/src/plugins/: combatantplugin.rs  mod.rs  serverconnection.rs
server/src/systems/: combatantsystem.rs  mod.rs
shared/: Cargo.toml
shared/src/: globalcomponents.rs  globalevents.rs  globalresources.rs  lib.rs  protocol.rs
shared/src/bundles/: combatant.rs  mod.rs
shared/src/components/: combatant.rs  mod.rs  states.rs
shared/src/systems/: animationsystem.rs  charactercontrollersysem.rs  mod.rs  statesmachinesystem.rs
shared/src/traits/: mod.rs
