[package]
name = "client"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
bevy = {workspace = true}
avian3d = {workspace = true}
shared = { path = "../shared" }
bevy-inspector-egui = {workspace = true}
lightyear = {workspace = true}
serde = {workspace = true}
leafwing-input-manager = {workspace = true}