[package]
name = "shared"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
bevy = {workspace = true}
avian3d = {workspace = true}
bevy-inspector-egui = {workspace = true}
lightyear = {workspace = true}
serde = {workspace = true}

